--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,12 @@
 cmake_minimum_required(VERSION 3.15...3.30)
 
-project(tms
+project(tmsg
     VERSION 1.0
-    DESCRIPTION "Turing machine simulator"
+    DESCRIPTION "Turing machine simulator & generator"
     LANGUAGES CXX)
 
-add_executable(tms main.cpp turing.cpp)
+add_executable(tmsg main.cpp turing.cpp)
 
-set_target_properties(tms PROPERTIES
+set_target_properties(tmsg PROPERTIES
     CXX_STANDARD 23
     CXX_EXTENSIONS OFF)
